# AIBlackJackTrainer

./: .gitignore  .replit  AWS_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ai_coach.py  amplify.yml  analytics.py  app.py  app_deployment.py  app_runner_fix.py  apprunner.yaml  bja_charts.py  bja_strategy.py  blackjack_table.py  buildspec.yml  card_counting.py  card_visuals.py  database.py  download_cards.py  enhanced_ai_coach.py  game_engine.py  monte_carlo.py  pyproject.toml  replit.md  requirements-aws.txt  requirements.txt  setup.py  simple_complete_app.py  strategy_tables.py  streamlit_runner.py  user_management.py  web_scraper.py
.streamlit/: config.toml
attached_assets/: simple_nicu.tgz
templates/: complete_app.html
